temp fix for improving readability of book page title
git-svn-id: https://svn.library.cornell.edu/signaletheme/trunk@274 fd91eecc-2661-4fc6-be0c-6e8cf4f2035b

--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -208,7 +208,7 @@ footer {
 .page-books {
 	.page-title {
 		h2 {
-			.text-transform: none;
+			text-transform: none;
 			font-size: 2em;
 			width: 75%;
 			padding: 10px 50px 10px 20px;
